[gd_scene load_steps=14 format=3 uid="uid://sksky0mp0hff"]

[ext_resource type="PackedScene" uid="uid://dug3wrg4yt1it" path="res://Scenes/preparation.tscn" id="1_clode"]
[ext_resource type="Script" path="res://Scripts/Logic/battle_manager.gd" id="1_qhorj"]
[ext_resource type="Script" path="res://Scripts/Logic/robots_manager.gd" id="2_l6a6d"]
[ext_resource type="PackedScene" uid="uid://bl6xmtn14pqfc" path="res://Scenes/Main scenes/map.tscn" id="3_4e0xx"]
[ext_resource type="Script" path="res://Scripts/Logic/obstacle_manager.gd" id="4_j6xsb"]
[ext_resource type="PackedScene" uid="uid://bfgxshary5mvx" path="res://Scenes/Main scenes/Pergerakan.tscn" id="4_t8qkj"]
[ext_resource type="PackedScene" uid="uid://2nb28l2sgpv3" path="res://Scenes/action_option.tscn" id="5_o3vag"]
[ext_resource type="Script" path="res://Scripts/Logic/robot_information.gd" id="5_wjxfy"]
[ext_resource type="Texture2D" uid="uid://b3l1i1lraex81" path="res://Assets/Tres/Highlight.tres" id="6_eutyx"]
[ext_resource type="Theme" uid="uid://criq2ail4thcd" path="res://Assets/Tres/Button.tres" id="7_mfj8s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xta4"]
bg_color = Color(0.826905, 0.768301, 0.717503, 1)
corner_radius_top_left = 50
corner_radius_top_right = 15
corner_radius_bottom_right = 110
corner_radius_bottom_left = 10

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mfxd6"]
resource_name = "Highlight"
texture = ExtResource("6_eutyx")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_uwaoh"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_mfxd6")

[node name="Battle" type="Node"]

[node name="preparation" parent="." instance=ExtResource("1_clode")]

[node name="battle_manager" type="Node" parent="."]
script = ExtResource("1_qhorj")

[node name="robots_manager" type="Node" parent="."]
script = ExtResource("2_l6a6d")

[node name="obstacle_manager" type="Node" parent="."]
script = ExtResource("4_j6xsb")

[node name="Container" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="Panel" parent="Container"]
z_index = 1
layout_mode = 2
offset_left = 1047.0
offset_top = 98.225
offset_right = 1330.0
offset_bottom = 481.945
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1xta4")

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
offset_left = 1067.15
offset_top = 97.4138
offset_right = 1317.15
offset_bottom = 473.414
size_flags_horizontal = 3
script = ExtResource("5_wjxfy")

[node name="Robot" type="Label" parent="Container/VBoxContainer"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Robot Information
"

[node name="health_container" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="health" type="Label" parent="Container/VBoxContainer/health_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "health		:
"

[node name="health_value" type="Label" parent="Container/VBoxContainer/health_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="armor_container" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="armor" type="Label" parent="Container/VBoxContainer/armor_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "armor		:
"

[node name="armor_value" type="Label" parent="Container/VBoxContainer/armor_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="energy_container" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="energy" type="Label" parent="Container/VBoxContainer/energy_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "energy	:
"

[node name="energy_value" type="Label" parent="Container/VBoxContainer/energy_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="attackDmg_container" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="atk" type="Label" parent="Container/VBoxContainer/attackDmg_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "attack :
"

[node name="atk_value" type="Label" parent="Container/VBoxContainer/attackDmg_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="skillDmg_container" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="skill" type="Label" parent="Container/VBoxContainer/skillDmg_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "skill	 :
"

[node name="skill_value" type="Label" parent="Container/VBoxContainer/skillDmg_container"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="moveRange" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="mrange" type="Label" parent="Container/VBoxContainer/moveRange"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "move Range :
"

[node name="mrangeval" type="Label" parent="Container/VBoxContainer/moveRange"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="attackRange" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="atkrange" type="Label" parent="Container/VBoxContainer/attackRange"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "attack Range :
"

[node name="atkrangeval" type="Label" parent="Container/VBoxContainer/attackRange"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="skillRange" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="skillrange" type="Label" parent="Container/VBoxContainer/skillRange"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "skill Range :
"

[node name="skillrangeval" type="Label" parent="Container/VBoxContainer/skillRange"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="skill_energy" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="skillenergy" type="Label" parent="Container/VBoxContainer/skill_energy"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Move Energy :
"

[node name="skillenergyval" type="Label" parent="Container/VBoxContainer/skill_energy"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="attack_energy" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="atkenergy" type="Label" parent="Container/VBoxContainer/attack_energy"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Attack Energy :
"

[node name="atkenergyval" type="Label" parent="Container/VBoxContainer/attack_energy"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="move_energy" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="moveenergy" type="Label" parent="Container/VBoxContainer/move_energy"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "skill Energy :
"

[node name="moveenergyval" type="Label" parent="Container/VBoxContainer/move_energy"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="robot_state" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="state" type="Label" parent="Container/VBoxContainer/robot_state"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "skill Energy :
"

[node name="stateval" type="Label" parent="Container/VBoxContainer/robot_state"]
z_index = 2
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="Map" parent="." instance=ExtResource("3_4e0xx")]
visible = true
position = Vector2(334, 64)
layer_0/tile_data = PackedInt32Array(0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, 1, 4, 0, 65537, 4, 0, 131073, 4, 0, 196609, 4, 0, 262145, 4, 0, 2, 4, 0, 65538, 4, 0, 131074, 4, 0, 196610, 4, 0, 262146, 4, 0, 3, 4, 0, 65539, 4, 0, 131075, 4, 0, 196611, 4, 0, 262147, 4, 0, 4, 4, 0, 65540, 4, 0, 131076, 4, 0, 196612, 4, 0, 262148, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0)
layer_1/tile_data = PackedInt32Array(393206, 2293761, 3, 458742, 2293761, 3, 393207, 2293761, 3, 458743, 2293761, 3, 393208, 2293761, 3, 458744, 2293761, 3, 393209, 2293761, 3, 458745, 2293761, 3, 393210, 2293761, 3, 458746, 2293761, 3, 393211, 2293761, 3, 458747, 2293761, 3, 393212, 2293761, 3, 458748, 2293761, 3, 393213, 2293761, 3, 458749, 2293761, 3, 393214, 2293761, 3, 458750, 2293761, 3, 393215, 2293761, 3, 458751, 2293761, 3, 327690, 2293761, 3, 393226, 2293761, 3, 327691, 2293761, 3, 393227, 2293761, 3, -131082, 2293761, 3, -65546, 2293761, 3, -10, 2293761, 3, 65526, 2293761, 3, 131062, 2293761, 3, 196598, 2293761, 3, 262134, 2293761, 3, 327670, 2293761, 3, -131081, 2293761, 3, -65545, 2293761, 3, -9, 2293761, 3, 65527, 2293761, 3, 131063, 2293761, 3, 196599, 2293761, 3, 262135, 2293761, 3, 327671, 2293761, 3, -131080, 2293761, 3, -65544, 2293761, 3, -8, 2293761, 3, 65528, 2293761, 3, 131064, 2293761, 3, 196600, 2293761, 3, 262136, 2293761, 3, 327672, 2293761, 3, -131079, 2293761, 3, -65543, 2293761, 3, -7, 2293761, 3, 65529, 2293761, 3, 131065, 2293761, 3, 196601, 2293761, 3, 262137, 2293761, 3, 327673, 2293761, 3, -131078, 2293761, 3, -65542, 2293761, 3, -6, 2293761, 3, 65530, 2293761, 3, 131066, 2293761, 3, 196602, 2293761, 3, 262138, 2293761, 3, 327674, 2293761, 3, -196603, 2293761, 3, -131067, 2293761, 3, -65531, 2293761, 3, -196602, 2293761, 3, -131066, 2293761, 3, -65530, 2293761, 3, -196601, 2293761, 3, -131065, 2293761, 3, -65529, 2293761, 3, -196600, 2293761, 3, -131064, 2293761, 3, -65528, 2293761, 3, -196599, 2293761, 3, -131063, 2293761, 3, -65527, 2293761, 3, -196598, 2293761, 3, -131062, 2293761, 3, -65526, 2293761, 3, 10, 2293761, 3, 65546, 2293761, 3, 131082, 2293761, 3, 196618, 2293761, 3, 262154, 2293761, 3, -196597, 2293761, 3, -131061, 2293761, 3, -65525, 2293761, 3, 11, 2293761, 3, 65547, 2293761, 3, 131083, 2293761, 3, 196619, 2293761, 3, 262155, 2293761, 3, -5, 2293761, 3, -4, 2293761, 3, -3, 2293761, 3, -2, 2293761, 3, -1, 2293761, 3, -65536, 2293761, 3, -65535, 2293761, 3, -65534, 2293761, 3, -65533, 2293761, 3, -65532, 2293761, 3, -65524, 2293761, 3, -65523, 2293761, 3, -65522, 2293761, 3, -65521, 2293761, 3, 65531, 2293761, 3, 65532, 2293761, 3, 65533, 2293761, 3, 65534, 2293761, 3, 65535, 2293761, 3, 12, 2293761, 3, 13, 2293761, 3, 14, 2293761, 3, 15, 2293761, 3, 131067, 2293761, 3, 131068, 2293761, 3, 131069, 2293761, 3, 131070, 2293761, 3, 131071, 2293761, 3, 65548, 2293761, 3, 65549, 2293761, 3, 65550, 2293761, 3, 65551, 2293761, 3, 196603, 2293761, 3, 196604, 2293761, 3, 196605, 2293761, 3, 196606, 2293761, 3, 196607, 2293761, 3, 131084, 2293761, 3, 131085, 2293761, 3, 131086, 2293761, 3, 131087, 2293761, 3, 262139, 2293761, 3, 262140, 2293761, 3, 262141, 2293761, 3, 262142, 2293761, 3, 262143, 2293761, 3, 196620, 2293761, 3, 196621, 2293761, 3, 196622, 2293761, 3, 196623, 2293761, 3, 327675, 2293761, 3, 327676, 2293761, 3, 327677, 2293761, 3, 327678, 2293761, 3, 327679, 2293761, 3, 262156, 2293761, 3, 262157, 2293761, 3, 262158, 2293761, 3, 262159, 2293761, 3, 327692, 2293761, 3, 327693, 2293761, 3, 327694, 2293761, 3, 327695, 2293761, 3, 393228, 2293761, 3, 393229, 2293761, 3, 393230, 2293761, 3, 393231, 2293761, 3, 524282, 2293761, 3, 524283, 2293761, 3, 524284, 2293761, 3, 524285, 2293761, 3, 524286, 2293761, 3, 524287, 2293761, 3, 458762, 2293761, 3, 458763, 2293761, 3, 458764, 2293761, 3, 458765, 2293761, 3, 458766, 2293761, 3, 458767, 2293761, 3, 589818, 2293761, 3, 589819, 2293761, 3, 589820, 2293761, 3, 589821, 2293761, 3, 589822, 2293761, 3, 589823, 2293761, 3, 524298, 2293761, 3, 524299, 2293761, 3, 524300, 2293761, 3, 524301, 2293761, 3, 524302, 2293761, 3, 524303, 2293761, 3, 655354, 2293761, 3, 655355, 2293761, 3, 655356, 2293761, 3, 655357, 2293761, 3, 655358, 2293761, 3, 655359, 2293761, 3, 589834, 2293761, 3, 589835, 2293761, 3, 589836, 2293761, 3, 589837, 2293761, 3, 589838, 2293761, 3, 589839, 2293761, 3, 720890, 2293761, 3, 720891, 2293761, 3, 720892, 2293761, 3, 720893, 2293761, 3, 720894, 2293761, 3, 720895, 2293761, 3, 655360, 2293761, 3, 655361, 2293761, 3, 655362, 2293761, 3, 655363, 2293761, 3, 655364, 2293761, 3, 655365, 2293761, 3, 655366, 2293761, 3, 655367, 2293761, 3, 655368, 2293761, 3, 655369, 2293761, 3, 655370, 2293761, 3, 655371, 2293761, 3, 655372, 2293761, 3, 655373, 2293761, 3, 655374, 2293761, 3, 655375, 2293761, 3, 786426, 2293761, 3, 786427, 2293761, 3, 786428, 2293761, 3, 786429, 2293761, 3, 786430, 2293761, 3, 786431, 2293761, 3, 720896, 2293761, 3, 720897, 2293761, 3, 720898, 2293761, 3, 720899, 2293761, 3, 720900, 2293761, 3, 720901, 2293761, 3, 720902, 2293761, 3, 720903, 2293761, 3, 720904, 2293761, 3, 720905, 2293761, 3, 720906, 2293761, 3, 720907, 2293761, 3, 720908, 2293761, 3, 720909, 2293761, 3, 720910, 2293761, 3, 720911, 2293761, 3, -131077, 2293761, 3, -131076, 2293761, 3, -131075, 2293761, 3, -131074, 2293761, 3, -131073, 2293761, 3, -196608, 2293761, 3, -196607, 2293761, 3, -196606, 2293761, 3, -196605, 2293761, 3, -196604, 2293761, 3, -196596, 2293761, 3, -196595, 2293761, 3, -196594, 2293761, 3, -196593, 2293761, 3, -196592, 2293761, 3, -196591, 2293761, 3, -196590, 2293761, 3, -196589, 2293761, 3, -196588, 2293761, 3, -65541, 2293761, 3, -65540, 2293761, 3, -65539, 2293761, 3, -65538, 2293761, 3, -65537, 2293761, 3, -131072, 2293761, 3, -131071, 2293761, 3, -131070, 2293761, 3, -131069, 2293761, 3, -131068, 2293761, 3, -131060, 2293761, 3, -131059, 2293761, 3, -131058, 2293761, 3, -131057, 2293761, 3, -131056, 2293761, 3, -131055, 2293761, 3, -131054, 2293761, 3, -131053, 2293761, 3, -131052, 2293761, 3, -65520, 2293761, 3, -65519, 2293761, 3, -65518, 2293761, 3, -65517, 2293761, 3, -65516, 2293761, 3, 16, 2293761, 3, 17, 2293761, 3, 18, 2293761, 3, 19, 2293761, 3, 20, 2293761, 3, 65552, 2293761, 3, 65553, 2293761, 3, 65554, 2293761, 3, 65555, 2293761, 3, 65556, 2293761, 3, 131088, 2293761, 3, 131089, 2293761, 3, 131090, 2293761, 3, 131091, 2293761, 3, 131092, 2293761, 3, 196624, 2293761, 3, 196625, 2293761, 3, 196626, 2293761, 3, 196627, 2293761, 3, 196628, 2293761, 3, 262160, 2293761, 3, 262161, 2293761, 3, 262162, 2293761, 3, 262163, 2293761, 3, 262164, 2293761, 3, 327696, 2293761, 3, 327697, 2293761, 3, 327698, 2293761, 3, 327699, 2293761, 3, 327700, 2293761, 3, 393232, 2293761, 3, 393233, 2293761, 3, 393234, 2293761, 3, 393235, 2293761, 3, 393236, 2293761, 3, 524278, 2293761, 3, 524279, 2293761, 3, 524280, 2293761, 3, 524281, 2293761, 3, 458768, 2293761, 3, 458769, 2293761, 3, 458770, 2293761, 3, 458771, 2293761, 3, 458772, 2293761, 3, 589814, 2293761, 3, 589815, 2293761, 3, 589816, 2293761, 3, 589817, 2293761, 3, 524304, 2293761, 3, 524305, 2293761, 3, 524306, 2293761, 3, 524307, 2293761, 3, 524308, 2293761, 3, 655350, 2293761, 3, 655351, 2293761, 3, 655352, 2293761, 3, 655353, 2293761, 3, 589840, 2293761, 3, 589841, 2293761, 3, 589842, 2293761, 3, 589843, 2293761, 3, 589844, 2293761, 3, 720886, 2293761, 3, 720887, 2293761, 3, 720888, 2293761, 3, 720889, 2293761, 3, 655376, 2293761, 3, 655377, 2293761, 3, 655378, 2293761, 3, 655379, 2293761, 3, 655380, 2293761, 3, 786422, 2293761, 3, 786423, 2293761, 3, 786424, 2293761, 3, 786425, 2293761, 3, 720912, 2293761, 3, 720913, 2293761, 3, 720914, 2293761, 3, 720915, 2293761, 3, 720916, 2293761, 3, 851958, 2293761, 3, 851959, 2293761, 3, 851960, 2293761, 3, 851961, 2293761, 3, 851962, 2293761, 3, 851963, 2293761, 3, 851964, 2293761, 3, 851965, 2293761, 3, 851966, 2293761, 3, 851967, 2293761, 3, 786432, 2293761, 3, 786433, 2293761, 3, 786434, 2293761, 3, 786435, 2293761, 3, 786436, 2293761, 3, 786437, 2293761, 3, 786438, 2293761, 3, 786439, 2293761, 3, 786440, 2293761, 3, 786441, 2293761, 3, 786442, 2293761, 3, 786443, 2293761, 3, 786444, 2293761, 3, 786445, 2293761, 3, 786446, 2293761, 3, 786447, 2293761, 3, 786448, 2293761, 3, 786449, 2293761, 3, 786450, 2293761, 3, 786451, 2293761, 3, 786452, 2293761, 3)

[node name="Pergerakan" parent="Map" instance=ExtResource("4_t8qkj")]
kecepatan = 500.0

[node name="Square" parent="Map/Pergerakan/Indikator" index="0"]
z_index = 1

[node name="action-option" parent="Map" instance=ExtResource("5_o3vag")]

[node name="Highlight" type="TileMap" parent="Map"]
tile_set = SubResource("TileSet_uwaoh")
format = 2
layer_0/name = "Move"
layer_0/modulate = Color(3.65794e-06, 0.793039, 0.877403, 0.392157)
layer_1/name = "Attack"
layer_1/modulate = Color(1, 0, 0, 0.392157)
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Skill"
layer_2/modulate = Color(1, 0, 1, 0.392157)
layer_2/tile_data = PackedInt32Array()
layer_3/name = "attackable"
layer_3/modulate = Color(0.835294, 0, 0.027451, 1)
layer_3/tile_data = PackedInt32Array()

[node name="enterarena" type="Timer" parent="Map"]
wait_time = 5.0
one_shot = true

[node name="obstacleTimer" type="Timer" parent="Map"]
wait_time = 4.0
one_shot = true

[node name="button_end_turn" type="Button" parent="Map"]
offset_left = -237.631
offset_top = 551.498
offset_right = -22.631
offset_bottom = 627.498
theme = ExtResource("7_mfj8s")
theme_override_colors/icon_focus_color = Color(0.955963, 0.955963, 0.955963, 1)
action_mode = 0
text = "End turn"

[node name="turntime" type="Timer" parent="Map"]
wait_time = 31.0

[node name="timeinformation" type="Label" parent="Map"]
offset_left = -216.0
offset_top = 51.0
offset_right = -16.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 53
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="redpoint" type="Label" parent="Map"]
offset_left = -322.76
offset_top = 175.934
offset_right = -238.76
offset_bottom = 252.934
theme_override_colors/font_color = Color(0.987397, 0, 0.29816, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="bluepoint" type="Label" parent="Map"]
offset_left = -141.112
offset_top = 168.189
offset_right = -56.1122
offset_bottom = 242.189
theme_override_colors/font_color = Color(0, 0, 0.992157, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Map"]
rotation = -1.01753
color = Color(0.537011, 0.537011, 0.537011, 1)
energy = 0.35
range_z_min = -139
range_z_max = 304
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 0.3
height = 0.88
max_distance = 885.0

[node name="PointLight2D" type="PointLight2D" parent="Map"]
visible = false
position = Vector2(-0.176787, -0.618713)
scale = Vector2(28.9307, 27.6933)
energy = 2.03

[connection signal="nextState" from="preparation" to="battle_manager" method="_on_preparation_next_state"]
[connection signal="battleended" from="battle_manager" to="Map" method="_on_battle_manager_battleended"]
[connection signal="changedState" from="battle_manager" to="Map" method="_on_battle_manager_changed_state"]
[connection signal="switched" from="battle_manager" to="Map" method="_on_battle_manager_switched"]
[connection signal="managed_action" from="Map" to="robots_manager" method="_on_map_managed_action"]
[connection signal="turned" from="Map" to="battle_manager" method="_on_map_turned"]
[connection signal="move_finished" from="Map/Pergerakan" to="Map" method="_on_pergerakan_move_finished"]
[connection signal="mouse_entered_each_option" from="Map/action-option" to="Map" method="_on_actionoption_mouse_entered_each_option"]
[connection signal="selected_action" from="Map/action-option" to="Map" method="_on_actionoption_selected_action"]
[connection signal="timeout" from="Map/enterarena" to="Map" method="_on_enterarena_timeout"]
[connection signal="timeout" from="Map/obstacleTimer" to="Map" method="_on_obstacle_timer_timeout"]
[connection signal="button_down" from="Map/button_end_turn" to="Map" method="_on_button_end_turn_button_down"]
[connection signal="timeout" from="Map/turntime" to="battle_manager" method="_on_turntime_timeout"]

[editable path="preparation"]
[editable path="Map/Pergerakan"]
